<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/primaryLightColor"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_profile_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/no_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical3p"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:text="@string/playerName"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/deletePlayer"
        app:layout_constraintLeft_toRightOf="@id/playerImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/deletePlayer"
        android:layout_width="87dp"
        android:layout_height="43dp"
        android:layout_below="@id/playerUserName"
        android:layout_margin="4dp"
        android:backgroundTint="@color/primaryButtonColor"
        android:text="@string/delete_player"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:background="@drawable/search_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="@id/playerImage"
        app:layout_constraintTop_toBottomOf="@+id/playerUserName"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical3p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

</androidx.constraintlayout.widget.ConstraintLayout>