<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapa_480x800"
    android:orientation="horizontal"
    tools:context=".view.MapFragment">


    <!-- América del Sur -->
    <ImageView
        android:id="@+id/imageColombia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/colombia_name"
        android:src="@drawable/colombia_white" />

    <TextView
        android:id="@+id/numberColombia"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageColombia"
        android:layout_alignTop="@id/imageColombia"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imagePeru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/peru_name"
        android:src="@drawable/peru_white" />

    <TextView
        android:id="@+id/numberPeru"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imagePeru"
        android:layout_alignTop="@id/imagePeru"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageBrazil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/brazil_name"
        android:src="@drawable/brazil_white" />

    <TextView
        android:id="@+id/numberBrazil"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageBrazil"
        android:layout_alignTop="@id/imageBrazil"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />


    <ImageView
        android:id="@+id/imageArgentina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/argentina_name"
        android:src="@drawable/argentina_white" />

    <TextView
        android:id="@+id/numberArgentina"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageArgentina"
        android:layout_alignTop="@id/imageArgentina"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageChile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/chile_name"
        android:src="@drawable/chile_white" />

    <TextView
        android:id="@+id/numberChile"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageChile"
        android:layout_alignTop="@id/imageChile"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageUruguay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/uruguay_name"
        android:src="@drawable/uruguay_white" />

    <TextView
        android:id="@+id/numberUruguay"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageUruguay"
        android:layout_alignTop="@id/imageUruguay"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />
    <!-- África -->
    <ImageView
        android:id="@+id/imageSouthafrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/southafrica_name"
        android:src="@drawable/southafrica_white" />

    <TextView
        android:id="@+id/numberSouthafrica"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageSouthafrica"
        android:layout_alignTop="@id/imageSouthafrica"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageSahara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sahara_name"
        android:src="@drawable/sahara_white" />

    <TextView
        android:id="@+id/numberSahara"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageSahara"
        android:layout_alignTop="@id/imageSahara"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageEgypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/egypt_name"
        android:src="@drawable/egypt_white" />

    <TextView
        android:id="@+id/numberEgypt"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageEgypt"
        android:layout_alignTop="@id/imageEgypt"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageEthiopia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ethiopia_name"
        android:src="@drawable/ethiopia_white" />

    <TextView
        android:id="@+id/numberEthiopia"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageEthiopia"
        android:layout_alignTop="@id/imageEthiopia"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageZaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/zaire_name"
        android:src="@drawable/zaire_white" />

    <TextView
        android:id="@+id/numberZaire"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageZaire"
        android:layout_alignTop="@id/imageZaire"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <ImageView
        android:id="@+id/imageMadagascar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/madagascar_name"
        android:src="@drawable/madagascar_white" />

    <TextView
        android:id="@+id/numberMadagascar"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignLeft="@id/imageMadagascar"
        android:layout_alignTop="@id/imageMadagascar"
        android:layout_gravity="center"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textColor="@color/armiesNumberColor"
        android:textSize="8sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:text="Ataque"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/attacker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/defender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnAtack"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/atack"
            android:visibility="invisible" />
        <Button
            android:id="@+id/btnAccept"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/accept"
            android:visibility="invisible" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />


        <LinearLayout
            android:id="@+id/movingDicesAttacker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="parent"
            android:visibility="invisible"

            >

            <ImageView
                android:id="@+id/movingDicesAttacker1"
                android:layout_width="51dp"
                android:layout_height="50dp"
                android:background="@drawable/dice1"
                />
            <ImageView
                android:id="@+id/movingDicesAttacker2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/dice2"
                android:layout_marginHorizontal="20dp"
                />
            <ImageView
                android:id="@+id/movingDicesAttacker3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/dice3"
                />
            <!--<pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesAttacker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesAttacker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesAttacker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/movingDicesDefender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/movingDicesAttacker"
            app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="parent"
            android:visibility="invisible"
            >
            <ImageView
                android:id="@+id/movingDicesDefender1"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@drawable/dice4"
                />
            <ImageView
                android:id="@+id/movingDicesDefender2"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@drawable/dice5"
                android:layout_marginHorizontal="20dp"
                />
            <ImageView
                android:id="@+id/movingDicesDefender3"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@drawable/dice6"
                />
         <!--   <pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesDefender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesDefender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/movingDicesDefender3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mov_dice" />-->
        </LinearLayout>
            <!--    <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/mov_dice"
                    />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
